<resources>
    <string name="app_name">TimeTable</string>
    <string name="day_text">Day</string>
    <string name="start_time_text">Start Time</string>
    <string name="end_time_text">End Time</string>
    <string name="type_text">Type</string>
    <string name="subject_text">Subject</string>
    <string name="subject_short_text">Subject Short</string>
    <string name="teacher_text">Teacher</string>
    <string name="notes_text">Notes</string>
    <string name="location_text">Location</string>


</resources>
